# imitation-1

./: pyproject.toml  setup.py
examples/: quickstart.py
src/imitation/algorithms/: adversarial.py  bc.py  bc_new.py  bc_old.py  dagger.py  dagger_old.py
src/imitation/data/: rollout.py  wrappers.py
src/imitation/util/: logger.py  reward_wrapper.py  util.py
